deleted empty collaborator list item and fixed bullet point for list item on mobile homepage

--- a/src/styles/config/_base.scss
+++ b/src/styles/config/_base.scss
@@ -99,6 +99,10 @@ h1, h2, h3, h4, h5, h6, p, li {
   margin: 0;
 }
 
+li {
+  list-style: none;
+}
+
 hr {
   color: currentColor;
   margin: 0;
